5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1573_579.log
== TEST (2019-03-11 19:51:02) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:17) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- OUTPUT:
A UFAM tem 107 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:51:30) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.276586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:52:17) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.148972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:53:10) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.146494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:54:09) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundação")
-- OUTPUT:
A UFAM tem 110 anos de fundação
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:54:15) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.162659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2019 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:54:38) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.3035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:54:54) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.155717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 00:04:35) 
-- CODE:
print("A UFAM tem", 2016 - 1909 = 107, "anos de fundação")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 - 1909 = 107, "anos de fundação")
                       ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 00:04:43) 
-- CODE:
print("A UFAM tem", 2016 - 1909 = 107, "anos de fundação")
-- EXECUTION TIME:
0.183729
-- ERROR:
  File "/home/codebench/codes/1573/579/main.py", line 1
    print("A UFAM tem", 2016 - 1909 = 107, "anos de funda\xe7\xe3o")
                       ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 00:05:01) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundação")
-- EXECUTION TIME:
0.121432
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/579/main.py", line 1, in <module>
    print("A UFAM tem", 2016 - 1909, "anos de funda\xe7\xe3o")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 00:06:18) 
-- CODE:
print("A UFAM tem", 2016 _ 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.150541
-- ERROR:
  File "/home/codebench/codes/1573/579/main.py", line 1
    print("A UFAM tem", 2016 _ 1909, "anos de fundacao.")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 00:06:21) 
-- CODE:
print("A UFAM tem", 2016 _ 1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016 _ 1909, "anos de fundacao.")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 00:06:37) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 00:07:09) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 00:07:09) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 00:07:09) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.188636
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 00:07:14) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 02:36:28) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
